--- a/src/screens/styles/About.css
+++ b/src/screens/styles/About.css
@@ -7,16 +7,16 @@
   position: relative;
   display: flex;
 }
-.container-myself {
+/* .container-myself {
   width: 50%;
   min-height: 400px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
+} */
 .container-parcours {
   width: 50%;
-  min-height: 400px;
+  min-height: 100%;
   align-self: center;
   display: flex;
   flex-direction: column;
@@ -24,6 +24,7 @@
 }
 .container-myself {
   display: flex;
+  min-height: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
@@ -36,9 +37,10 @@
 .lang-container,
 .tools-container {
   width: 40%;
-  min-height: 300px;
+  min-height: 35vh;
   padding: 1vh 1vw;
   border: 5px solid rgb(7, 6, 12);
+  margin-bottom: 15px;
 }
 .lang-container {
   box-shadow: 20px 20px 0px #01011b;
